# rust_system

./: .env.example  .gitignore  Cargo.toml  README.md  README_bollinger_test.md  \  config.toml  polling_vs_queue_test.py  start_bollinger_test.sh  status_bollinger_test.sh  test_binance_latency.py  ws_latency_test.py
benches/: trait_performance.rs
docs/: multi_symbol_websocket.md
examples/: multi_symbol_websocket_example.rs
migration/src/: m20220101_000001_create_table.rs
scripts/: start_bollinger_test.sh  start_lead_lag_test.sh  start_strategy.sh  status_bollinger_test.sh  status_strategy.sh  stop_bollinger_test.sh  stop_strategy.sh
src/: lib.rs  main.rs
src/calculation/: mod.rs
src/calculation/factors/: hbfc.rs  mod.rs
src/calculation/strategy/: mod.rs  strategy_one.rs
src/common/: config.rs  config_loader.rs  consts.rs  enums.rs  error.rs  mod.rs  order.rs  signal.rs  simple_logging.rs  symbol.rs  ts.rs  utils.rs
src/common/config/: api_config.rs  mod.rs  processing_config.rs  user_config.rs  ws_config.rs
src/database/: connection.rs  mod.rs
src/database/entities/: mod.rs  prelude.rs  token.rs
src/database/message_queue/: entities.rs  mod.rs  operations.rs
src/dto/: mod.rs
src/dto/aster/: mod.rs  rest_api.rs  websocket.rs
src/dto/binance/: mod.rs  rest_api.rs  websocket.rs
src/dto/mexc/: mod.rs  protobuf.rs  rest_api.rs  websocket.rs
src/dto/unified/: mod.rs  uni_kline.rs
src/exchange_api/: mod.rs
src/exchange_api/aster/: api.rs  client.rs  mod.rs
src/exchange_api/aster/ws/: client.rs
src/exchange_api/binance/: api.rs  api_manager.rs  mod.rs  ws.rs  ws_manager.rs
src/exchange_api/mexc/: mod.rs  spotapi.rs  spotws.rs
src/exchange_api/utils/: mod.rs
src/factory/: bollinger_fac.rs  mod.rs  q1_fac.rs
src/factory/bn_factory/: kline.rs
src/middle_processor/: mod.rs  snapshot_creator.rs
src/models/: enums.rs  exchange.rs  hft_position.rs  key.rs  mexc.rs  mod.rs  order.rs  order_tick.rs  order_tick_u64.rs  orderbook.rs  orderbook_u64.rs  position.rs  signal.rs  strategy.rs  symbol.rs  trade_tick.rs  trade_tick_u64.rs
src/order/: filter_manager.rs  mod.rs  order_manager.rs  orderf.rs  orders.rs  utils.rs
src/schedulers/: mod.rs
src/schedulers/binance/: example.rs  mod.rs  ws_producer.rs
src/strategy/: bollinger.rs  common.rs  hbfc.rs  macd.rs  mod.rs  multi_strategy_manager.rs  q1.rs  strategy_manager.rs  turtle.rs
src/strategy/kline/: mod.rs  zy.rs
src/strategy/market_maker/: static_spread.rs
src/strategy/order_book_taker/: lead_lag.rs  ml_v1.rs  mod.rs  test_strategy.rs
tests/: websocket_config_tests.rs
