[package]
name = "rust_system"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_system"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
tokio-cron = "0.1.3"
redis = {version = "0.32.0", features = ['tokio-comp', 'aio']}
# Database - SeaORM
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json"] }
sea-orm-migration = "1.1"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
url = "2.5"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.14"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
dotenv = "0.15"

# Async traits
async-trait = "0.1"

# Crypto
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
